--- a/theband.html
+++ b/theband.html
@@ -11,13 +11,10 @@
     <!--link to bootstrap stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
-    <!--link to hover effects-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-
     <!--link to font Awesome-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-    <!-- My style sheet to update the original template-->
+    <!-- My style sheete-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
     <title>The Monkees website</title>
@@ -33,14 +30,14 @@
         <div class="wrapper-header">
 
             <div class="row">
-                <!----------LOGO------------->
+                <!--LOGO-->
 
                 <div class="col-xs-6 col-sm-2 logo">
-                    <a href="index.html"><img src="images/logo.png" alt="Monkees logo"></img></a>
+                    <a href="index.html"><img src="images/logo.png" alt="Monkees logo"></a>
                 </div>
 
 
-                <!----------NAV------------->
+                <!--NAV-->
 
 
                 <div class="col-xs-6 col-sm-10 bg-nav">
@@ -59,11 +56,11 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
-                                <li class="nav-item nav-item-menu active"><a href="theband.html"><i class="fa fa-music hidden-xs" aria-hidden="true" aria-hidden="true"></i><span class="page">The Band</span> <span class="sr-only">(current)</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs" aria-hidden="true" aria-hidden="true"></i><span class="page">News</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs" aria-hidden="true" aria-hidden="true"></i><span class="page">Listen</span></a></li>
-                                <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs" aria-hidden="true" aria-hidden="true"></i><span class="page">Contact</span></a></li>
-                                <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
+                                <li class="nav-item nav-item-menu active"><a href="theband.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">The Band</span> <span class="sr-only">(current)</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs" aria-hidden="true"></i><span class="page">News</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">Listen</span></a></li>
+                                <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs" aria-hidden="true"></i><span class="page">Contact</span></a></li>
+                                <li class="nav-item subscribe"><button class="btn btn-success2" data-toggle="modal" data-target="#myModal">Subscribe</button></li>
                             </ul>
 
 
@@ -90,7 +87,7 @@
                 </div>
             </div>
 
-            <!------------------ history of the band------------------------>
+            <!--history of the band-->
 
             <div class="row">
                 <div class="col-12-xs">
@@ -103,7 +100,7 @@
 
                 <div class="col-xs-12">
                     <div class="bandimage">
-                        <img src="images/band.jpg" alt="picture of the band" class="img-rounded"></img>
+                        <img src="images/band.jpg" alt="picture of the band" class="img-rounded">
                         <h5 class="text-muted">The Monkees in 1966</h5>
                     </div>
 
@@ -144,7 +141,7 @@
 
                 <div class="col-xs-12">
                     <div class="bandimage2">
-                        <img src="images/band2.jpg" alt="picture of the band" class="img-rounded"></img>
+                        <img src="images/band2.jpg" alt="picture of the band" class="img-rounded">
                         <h5 class="text-muted">The Monkees in 1966</h5>
                     </div>
 
@@ -170,7 +167,7 @@
                             25 percent of the album, and the band's collaborative energy began to dissipate.</p>
 
                         <p>
-                            <a href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck" class="readmore" target="_black">Read more on Spotify...</a>
+                            <a href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck" class="readmore" target="_blank">Read more on Spotify...</a>
                         </p>
 
 
@@ -182,7 +179,7 @@
 
 
 
-            <!------------------ memebers ------------------------>
+            <!--memebers-->
 
             <div class="row member-disco">
 
@@ -201,7 +198,7 @@
                             <div class="row">
                                 <div class="col-xs-12 member-image">
                                     <h3 class="text-center">Davy Jones</h3>
-                                    <img src="images/dj.jpg" alt="picture of Davy Jones" class="img-circle center-block img-responsive" max-width="140px"></img>
+                                    <img src="images/dj.jpg" alt="picture of Davy Jones" class="img-circle center-block img-responsive" width="140">
                                 </div>
                             </div>
                             <div class="row">
@@ -218,7 +215,7 @@
                             <div class="row">
                                 <div class="col-xs-12 member-image">
                                     <h3 class="text-center">Micky Dolenz</h3>
-                                    <img src="images/md.jpg" alt="picture of Micky Dolenz" class="img-circle center-block img-responsive" max-width="140px"></img>
+                                    <img src="images/md.jpg" alt="picture of Micky Dolenz" class="img-circle center-block img-responsive" width="140">
                                 </div>
                             </div>
                             <div class="row">
@@ -236,7 +233,7 @@
                             <div class="row">
                                 <div class="col-xs-12 member-image">
                                     <h3 class="text-center">Michael Nesmith</h3>
-                                    <img src="images/mn.jpg" alt="picture of Michael Nesmith" class="img-circle center-block img-responsive" max-width="140px"></img>
+                                    <img src="images/mn.jpg" alt="picture of Michael Nesmith" class="img-circle center-block img-responsive" width="140">
                                 </div>
                             </div>
                             <div class="row">
@@ -253,7 +250,7 @@
                             <div class="row">
                                 <div class="col-xs-12 member-image">
                                     <h3 class="text-center">Peter Tork</h3>
-                                    <img src="images/pt.jpg" alt="picture of Peter Tork" class="img-circle center-block img-responsive" max-width="140px"></img>
+                                    <img src="images/pt.jpg" alt="picture of Peter Tork" class="img-circle center-block img-responsive" width="140">
                                 </div>
                             </div>
                             <div class="row">
@@ -269,7 +266,7 @@
 
                 </div>
 
-                <!------------------ discography timeline ------------------------>
+                <!-- discography timeline -->
 
                 <div class="col-xs-12 col-lg-4 discography-wrapper">
 
@@ -282,40 +279,40 @@
 
                     <div class="row timeline">
                         <div class="disco-wrapper">
-                            <div class="col-12-xs discography" year="1966">
+                            <div class="col-12-xs discography" data-year="1966">
                                 <h3 class="discography-item">The Monkees</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1967">
+                            <div class="col-12-xs discography" data-year="1967">
                                 <h3 class="discography-item">More of The Monkees</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1967">
+                            <div class="col-12-xs discography" data-year="1967">
                                 <h3 class="discography-item">Headquarters</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1967">
+                            <div class="col-12-xs discography" data-year="1967">
                                 <h3 class="discography-item">Pisces, Aquarius, Capricorn & Jones Ltd.</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1968">
+                            <div class="col-12-xs discography" data-year="1968">
                                 <h3 class="discography-item">The Birds, The Bees & the Monkees</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1969">
+                            <div class="col-12-xs discography" data-year="1969">
                                 <h3 class="discography-item">Instant Replay</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1969">
+                            <div class="col-12-xs discography" data-year="1969">
                                 <h3 class="discography-item">The Monkees Present</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1970">
+                            <div class="col-12-xs discography" data-year="1970">
                                 <h3 class="discography-item">Changes</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1987">
+                            <div class="col-12-xs discography" data-year="1987">
                                 <h3 class="discography-item">Pool It!</h3>
                             </div>
-                            <div class="col-12-xs discography" year="1996">
+                            <div class="col-12-xs discography" data-year="1996">
                                 <h3 class="discography-item">Justus</h3>
                             </div>
-                            <div class="col-12-xs discography" year="2016">
+                            <div class="col-12-xs discography" data-year="2016">
                                 <h3 class="discography-item">Good Times! </h3>
                             </div>
-                            <div class="col-12-xs discography" year="2018">
+                            <div class="col-12-xs discography" data-year="2018">
                                 <h3 class="discography-item">Christmas Party</h3>
                             </div>
                         </div>
@@ -328,7 +325,7 @@
 
 
 
-  
+
 
     <footer class="container-fluid footer bg-all-footer">
 
@@ -343,20 +340,20 @@
             </dl>
         </div>
 
-        <div class="bg-social">
+             <div class="bg-social">
 
             <h5 class="uppercase text-center h5footer">Follow us!</h5>
 
             <ul class="list-inline social-media-area">
-                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
             </ul>
         </div>
     </footer>
 
 
-  <!-- Modal -->
+    <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -372,12 +369,6 @@
                         </div>
                         <div class="form-group">
                             <input type="email" name="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="password"  name="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="type your password again" required>
                         </div>
                         <div class="wrapper-check">
                             <div class="checkbox newsletter">
@@ -405,26 +396,12 @@
 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== 
-    
-    JQuery-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <!--Bootstrap (JS file)-->
+    <!--  JQuery-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!-- JavaScript Bootstrap-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
-
-    <!-- Placed at the end of the document so the pages load faster
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>        window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')    </script>
-    <script src="js/bootstrap.min.js"></script>
-    
-    /*
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! 
-    <script src="js/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug 
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>*/ -->
 
 
 </body>
