--- a/news.html
+++ b/news.html
@@ -11,13 +11,10 @@
     <!--link to bootstrap stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 
-    <!--link to hover effects-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-
     <!--link to font Awesome-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
-    <!-- My style sheet to update the original template-->
+    <!-- My style sheete-->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
     <title>The Monkees website</title>
@@ -25,22 +22,20 @@
 </head>
 
 
-
 <body>
 
-
-    <header class="conainer-fluid header-content">
+  <header class="conainer-fluid header-content">
         <div class="wrapper-header">
 
             <div class="row">
-                <!----------LOGO------------->
+                <!--LOGO-->
 
                 <div class="col-xs-6 col-sm-2 logo">
-                    <a href="index.html"><img src="images/logo.png" alt="Monkees logo"></img></a>
+                    <a href="index.html"><img src="images/logo.png" alt="Monkees logo"></a>
                 </div>
 
 
-                <!----------NAV------------->
+                <!--NAV-->
 
 
                 <div class="col-xs-6 col-sm-10 bg-nav">
@@ -63,7 +58,7 @@
                                 <li class="nav-item nav-item-menu active"><a href="news.html"><i class="fa fa-newspaper-o hidden-xs" aria-hidden="true"></i><span class="page">News</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="listen.html"><i class="fa fa-music hidden-xs" aria-hidden="true"></i><span class="page">Listen</span></a></li>
                                 <li class="nav-item nav-item-menu"><a href="contact.html"><i class="fa fa-comments hidden-xs" aria-hidden="true"></i><span class="page">Contact</span></a></li>
-                                <li class="nav-item subscribe"><a href="#" class="btn btn-success2" type="submit" data-toggle="modal" data-target="#myModal">Subscribe</a></li>
+                                <li class="nav-item subscribe"><button class="btn btn-success2" data-toggle="modal" data-target="#myModal">Subscribe</button></li>
                             </ul>
 
 
@@ -80,6 +75,9 @@
 
     </header>
 
+
+
+   
     <section class="container-fluid bg-section">
         <div class="wrapper-section">
 
@@ -127,7 +125,7 @@
                                         </div>
                                         <div class="col-xs-5 concert-buy">
                                             <h3><span class="label label-warning">Hurry Up!!!</span></h3>
-                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#myModal2">Book Now!</button>
 
                                         </div>
                                     </div>
@@ -136,7 +134,7 @@
                                         <div class="col-xs-12">
 
                                             <div class="progress concert-progress">
-                                                <div class="progress-bar progress-bar-striped progress-bar-warning uppercase active" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95% sold
+                                                <div class="progress-bar progress-bar-striped progress-bar-warning uppercase" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95% sold
                                                     <span class="sr-only">95% Complete</span>
                                                 </div>
                                             </div>
@@ -152,7 +150,7 @@
                                         </div>
                                         <div class="col-xs-5 concert-buy">
                                             <h3><span class="label label-warning">Hurry Up!!!</span></h3>
-                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#myModal2">Book Now!</button>
                                         </div>
                                     </div>
 
@@ -160,7 +158,7 @@
                                         <div class="col-xs-12">
 
                                             <div class="progress concert-progress">
-                                                <div class="progress-bar progress-bar-striped progress-bar-warning uppercase active" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                                                <div class="progress-bar progress-bar-striped progress-bar-warning uppercase" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                                                     80% sold<span class="sr-only">80% Complete</span>
                                                 </div>
                                             </div>
@@ -176,7 +174,7 @@
                                         </div>
                                         <div class="col-xs-5 concert-buy">
                                             <h4><span class="label label-info hidden"></span></h4>
-                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#myModal2">Book Now!</button>
                                         </div>
                                     </div>
 
@@ -184,7 +182,7 @@
                                         <div class="col-xs-12">
 
                                             <div class="progress concert-progress">
-                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">70% sold
+                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">70% sold
                                                     <span class="sr-only">70% Complete</span>
                                                 </div>
                                             </div>
@@ -199,8 +197,8 @@
                                             <h2 class="concert-day">Saturday 09 March 2019</h2>
                                         </div>
                                         <div class="col-xs-5 concert-buy">
-                                            <h4><span class="label label-info hidden"></span></h4>
-                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                            <h4><span class="label label-info hidden"> </span></h4>
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#myModal2">Book Now!</button>
                                         </div>
                                     </div>
 
@@ -208,7 +206,7 @@
                                         <div class="col-xs-12">
 
                                             <div class="progress concert-progress">
-                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                                                     60% sold<span class="sr-only">60% Complete</span>
                                                 </div>
                                             </div>
@@ -224,7 +222,7 @@
                                         </div>
                                         <div class="col-xs-5 concert-buy">
                                             <h4><span class="label label-info hidden"></span></h4>
-                                            <a href="#" class="btn btn-success" type="submit" data-toggle="modal" data-target="#myModal2">Book Now!</a>
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#myModal2">Book Now!</button>
                                         </div>
                                     </div>
 
@@ -232,7 +230,7 @@
                                         <div class="col-xs-12">
 
                                             <div class="progress concert-progress">
-                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase active" role="progressbar" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100" style="width: 32%">
+                                                <div class="progress-bar progress-bar-striped progress-bar-success uppercase" role="progressbar" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100" style="width: 32%">
                                                     32% sold<span class="sr-only">32% Complete</span>
                                                 </div>
                                             </div>
@@ -248,7 +246,7 @@
                                         </div>
                                         <div class="col-xs-5 concert-buy">
                                             <h4><span class="label label-info">Tickets available soon</span></h4>
-                                            <button type="button" class="btn btn-success hidden">Book Now!</button>
+                                            <button class="btn btn-success hidden" data-toggle="modal" data-target="#myModal2">Book Now!</button>
                                         </div>
                                     </div>
 
@@ -297,7 +295,7 @@
                                 <div class="col-xs-12">
                                     <div class="news-video">
                                         <div class="iframeframe">
-                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/v0DsCLK1PTg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/v0DsCLK1PTg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -317,7 +315,7 @@
                                 <div class="col-xs-12">
                                     <div class="news-video">
                                         <div class="iframeframe">
-                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/HXgwca99iVw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/HXgwca99iVw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -330,6 +328,8 @@
 
         </div>
     </section>
+
+ 
 
   <footer class="container-fluid footer bg-all-footer">
 
@@ -349,18 +349,15 @@
             <h5 class="uppercase text-center h5footer">Follow us!</h5>
 
             <ul class="list-inline social-media-area">
-                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
-                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
             </ul>
         </div>
-    </footer>
-
-   
+    </footer> 
 
 
- 
-  <!-- Modal -->
+ <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -376,12 +373,6 @@
                         </div>
                         <div class="form-group">
                             <input type="email" name="email" class="form-control" id="InputEmail1" placeholder="Enter your email" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="password"  name="password" class="form-control" id="InputPassword1" placeholder="type a password" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="type your password again" required>
                         </div>
                         <div class="wrapper-check">
                             <div class="checkbox newsletter">
@@ -407,7 +398,7 @@
         </div>
     </div>
 
-
+ 
 
     <!--Modal book tickets-->
     <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
@@ -433,7 +424,7 @@
 
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-save">Book Now!</button>
+                            <button type="submit" class="btn btn-signin">Book Now!</button>
                         </div>
                     </form>
 
@@ -446,27 +437,12 @@
 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== 
-    
-    JQuery-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <!--Bootstrap (JS file)-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--  JQuery-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- JavaScript Bootstrap-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
-
-    <!-- Placed at the end of the document so the pages load faster
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>        window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')    </script>
-    <script src="js/bootstrap.min.js"></script>
-    
-    /*
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! 
-    <script src="js/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug 
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>*/ -->
-
+ 
 
 </body>
 
